# CS544-Class-Demo-Files

./: .gitignore  readme.md
quic/: .gitignore  readme.md
quic-project/: P1-ProtocolAnalysisAssignment.docx  P2-ProtocolDesign.docx  P3-ProtocolImplementation.docx
quic/C/: .gitignore  echo  echo.c  echo_client.c  echo_client.h  echo_config.h  echo_proto.c  echo_proto.h  makefile  quic_client.c  quic_client.h  quic_config.h  quic_server.c  quic_server.h  quichelpers.c  quichelpers.h  quicpatch.h
quic/C-all-in-one/: echo  echo.c  quichelper.h  readme.md
quic/C-all-in-one/certs/: quic_certificate.pem  quic_csr.pem  quic_private_key.pem
quic/C-all-in-one/save/: echo_old.c_bak  my_program
quic/C/certs/: gencert.sh
quic/C/save/: quicpatch2.h  quicsample
quic/certs/: public_key.pem
quic/go/: go.mod  go.sum  readme.md
quic/node/: certgen.sh  certificate.conf  certs.sh  private_key.pem  server.js
quic/python/: client.py  echo.py  echo_client.py  echo_quic.py  echo_server.py  pdu.py  quic_client.py  quic_engine.py  quic_server.py  readme.md  requirements.txt  server.py
quic/python/certs/: gencert.sh  quic_certificate.pem  quic_csr.pem  quic_private_key.pem
quickie-rs/: Cargo.toml  rustfmt.toml
quickie-rs/src/: main.rs  message.rs
quickie-rs/src/cli/: client.rs  mod.rs  serve.rs
syllabus/: CS544-Syllabus.docx
webrtc-lab/: readme.md  requirements.txt  webrtc-lab.md  webrtc-study-guide.md
webrtc-lab/chat/: answer.json  answerer.py  loganalysis.py  offer.json  offerer.py  webrtc_timeline.html
webrtc-lab/video/: video-webrtc.py
(+27 files in other folders)
