[package]
name = "quickie-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "quicrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.3", features = ["cargo", "unicode", "env"] }
color-eyre = "0.6.3"
s2n-quic = "1.34.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = {version = "1", features = ["full"] }


[dev-dependencies]
pretty_assertions = "1.4.0"
